kube/student-backend.yaml
###########################
# Deployment
###########################

apiVersion: apps/v1
kind: Deployment
metadata:
  name: students-backend
  labels:
    app: students-backend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: students-backend
  template:
    metadata:
      labels:
        app: students-backend
    spec:
      containers:
      - args:
            - bash
            - -c
            - python manage.py makemigrations && python manage.py migrate && python manage.py runserver 0.0.0.0:8000
        name: students-backend
        image: nvallore/students-backend
        ports:
        - containerPort: 8000
---
###########################
# Cluster IP Service
###########################

apiVersion: v1
kind: Service
metadata:
  name: students-backend
spec:
  type: NodePort
  selector:
    app: students-backend
  ports:
    - protocol: TCP
      port: 8000
      targetPort: 8000
      nodePort: 31000
