kube/vaccination-postgres.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: vac-pos
  labels:
    app: vac-pos
    role: service
spec:
  replicas: 1
  selector:
    matchLabels:
      app: vac-pos
      role: service
  serviceName: vac-pos
  template:
    metadata:
      labels:
        app: vac-pos
        role: service
    spec:
      containers:
        - args:
            - -p
            - "5433"
          image: postgres
          name: vac-pos
          volumeMounts:
            - name: vac-pos
              mountPath: /var/lib/postgresql/data
      volumes:
        - name: vac-pos
          persistentVolumeClaim:
            claimName: vac-pos
---
apiVersion: v1
kind: Service
metadata:
  name: vac-pos
  labels:
    app: vac-pos
    role: service
spec:
  selector:
    app: vac-pos
    role: service
  type: NodePort
  ports:
    - name: vac-pos
      port: 5433
      targetPort: 5433
      protocol: TCP
